# lykin_tutorial

./: .gitignore  Cargo.toml  README.md
part_10_extension_ideas/: README.md
part_1_sbot_rocket/: Cargo.toml  README.md
part_1_sbot_rocket/src/: main.rs
part_2_subscribe_form/: Cargo.toml  README.md  notes
part_2_subscribe_form/src/: main.rs  routes.rs  sbot.rs
part_2_subscribe_form/templates/: base.html.tera
part_3_database_follows/: Cargo.toml  README.md  notes
part_3_database_follows/src/: db.rs  main.rs  routes.rs  sbot.rs
part_4_posts_streams/: Cargo.toml  README.md  notes
part_4_posts_streams/src/: db.rs  main.rs  sbot.rs
part_4_posts_streams/templates/: base.html.tera
part_5_task_loop/: Cargo.toml  README.md
part_5_task_loop/src/: db.rs  main.rs  routes.rs  task_loop.rs
part_6_ui_layout/: Cargo.toml  README.md
part_6_ui_layout/src/: db.rs  main.rs  routes.rs  sbot.rs  task_loop.rs  utils.rs
part_6_ui_layout/templates/: base.html.tera  post_list.html.tera  topbar.html.tera
part_6_update_ui/: Cargo.toml  README.md
part_6_update_ui/src/: main.rs
part_6_update_ui/templates/: peer_list.html.tera  post_list.html.tera
part_7_latest_posts/: Cargo.toml  README.md
part_7_latest_posts/src/: db.rs  main.rs  routes.rs  task_loop.rs
part_8_ui_posts/: Cargo.toml  README.md
part_8_ui_posts/src/: db.rs  main.rs  (+2 more)
part_9_read_delete/: Cargo.toml  README.md
part_9_read_delete/src/: db.rs  main.rs  routes.rs
part_9_read_delete/static/css/: lykin.css
part_9_read_delete/templates/: peer_list.html.tera  post_list.html.tera  topbar.html.tera
(+6 files in other folders)
